--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build http://bootcampreview_2020-07-04.surge.sh/ --token {{ secrets.SURGE_TOKEN }}
+      run: surge ./build http://bootcampreview_2020-07-04.surge.sh --token {{ secrets.SURGE_TOKEN }}
  
