--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         version: 12 
     
     - name: Github Action for yarn
-      uses: Borales/action-yarn@v2.1.0
+      uses: Borales/actions-yarn@v2.1.0
       with:
          # Yarn command
          cmd: install # npm install/ yarn install
